changed package.json homepage

--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
   "bugs": {
     "url": "https://github.com/BrentGarcia/netflix-landing-page-tutorial/issues"
   },
-  "homepage": "https://bradtraversy.github.io/netflix-landing-page-tutorial"
+  "homepage": "https://BrentGarcia.github.io/netflix-landing-page-tutorial"
 }
